[gd_scene load_steps=12 format=3 uid="uid://cf40fdu02yu4e"]

[ext_resource type="Script" path="res://Minigame2/CraftMovement.gd" id="1_j8dp7"]
[ext_resource type="Shader" uid="uid://bcrvgx7d2k0t3" path="res://Minigame2/craft.tres" id="2_afd6f"]
[ext_resource type="Texture2D" uid="uid://bo0i5dfmknwhe" path="res://Minigame2/assets/Probe.png" id="3_hrhq2"]
[ext_resource type="AudioStream" uid="uid://uay1unfede2v" path="res://Minigame2/assets/shoot.mp3" id="4_akfsi"]
[ext_resource type="AudioStream" uid="uid://djex0lkfcc44g" path="res://Minigame2/assets/death.mp3" id="5_1brmy"]
[ext_resource type="AudioStream" uid="uid://s3s3ib5tyrfn" path="res://Minigame2/assets/hit.mp3" id="6_7rxfv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pnpmf"]
shader = ExtResource("2_afd6f")
shader_parameter/enable = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qesv1"]
size = Vector2(445.397, 262.812)

[sub_resource type="Animation" id="Animation_k0cs1"]
resource_name = "Player_hit"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_bjb3n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_px7m4"]
_data = {
"Player_hit": SubResource("Animation_k0cs1"),
"RESET": SubResource("Animation_bjb3n")
}

[node name="Craft" type="Area2D"]
script = ExtResource("1_j8dp7")
speed = 300
maxTilt = 40
TiltSpeed = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_pnpmf")
position = Vector2(0.00012207, -0.999878)
scale = Vector2(0.361475, 0.361475)
texture = ExtResource("3_hrhq2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6.10352e-05, -0.999878)
scale = Vector2(0.361475, 0.361475)
shape = SubResource("RectangleShape2D_qesv1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_px7m4")
}

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="shootsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_akfsi")
pitch_scale = 1.51

[node name="deathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_1brmy")

[node name="hitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7rxfv")
